# AEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  GEMINI.md  LICENSE  build.bat  build.ps1  imgui.ini  main.cpp  vcpkg.json
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/assimp_loading_20260120/: plan.md  spec.md
conductor/archive/foundational_arch_20260119/: index.md  metadata.json  plan.md
conductor/archive/pbr_pipeline_20260120/: metadata.json  plan.md
conductor/archive/post_processing_20260122/: plan.md
conductor/archive/refactor_perf_20260121/: metadata.json  plan.md
conductor/archive/refactor_rendering_pipeline_20260125/: index.md  plan.md
conductor/archive/scene_editor_20260121/: index.md  metadata.json  plan.md
conductor/archive/shadow_mapping_20260121/: metadata.json
conductor/tracks/assimp_loading_20260120/: index.md  metadata.json  plan.md
conductor/tracks/cleanup_and_docs_20260126/: plan.md  refactor_proposal.md  spec.md
conductor/tracks/deferred_rendering_20260122/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/foundational_arch_20260119/: plan.md  spec.md
conductor/tracks/pbr_pipeline_20260120/: index.md  plan.md  spec.md
conductor/tracks/post_processing_20260122/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/refactor_perf_20260121/: index.md  plan.md  spec.md
conductor/tracks/refactor_rendering_pipeline_20260125/: metadata.json  spec.md
conductor/tracks/refactor_rhi_abstraction_20260205/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/scene_editor_20260121/: plan.md  spec.md
conductor/tracks/shadow_mapping_20260121/: index.md  plan.md  spec.md
docs/: AEngine_Architecture_3.0.md  Architecture.md  Index.md  ProjectOverview.md  RHI_Abstraction_Refactor_Guide.md
docs/features/: 01_Foundation.md  02_PBR_Rendering.md  03_Asset_Loading.md  04_Shadow_Mapping.md  05_Scene_Editor.md  06_Deferred_Pipeline.md
plugins/StatsPanel/: StatsPanel.cpp
shaders/: ACES_ToneMapping.frag  DeferredGeometry.frag  DeferredGeometry.vert  DeferredLighting.frag  DeferredLighting.vert  EquirectangularToCubemap.frag  IrradianceConvolution.frag  PostProcess.vert  ShadowDepth.frag  ShadowDepth.vert  StandardPBR.frag  StandardPBR.vert
src/Core/: AssetLoader.cpp  AssetLoader.h  Engine.cpp  Engine.h  FApplication.cpp  FApplication.h  GeometryUtils.cpp  GeometryUtils.h  Plugin.h  PluginManager.h  SceneNode.cpp  SceneNode.h  ShaderCompiler.cpp  ShaderCompiler.h  Subsystem.h  WindowSubsystem.cpp  WindowSubsystem.h
src/Engine/Modules/Engine.Asset/: AssetLoader.cpp  AssetLoader.h  module.json
src/Engine/Modules/Engine.RHI/: IMaterial.h  IRHIDevice.h  MaterialInstance.h  RHIDefinitions.h  RHIModule.h  RHIResources.h  RenderGraph.h  ShaderCompiler.h  module.json
src/Engine/Modules/Engine.Renderer/: DeferredGeometryPass.cpp  DeferredGeometryPass.h  DeferredLightingPass.cpp  DeferredLightingPass.h  ForwardLitPass.cpp  ForwardLitPass.h  IBLPreprocessor.cpp  IBLPreprocessor.h  PostProcessPass.cpp  PostProcessPass.h  RenderModule.cpp  RenderModule.h  SceneRenderer.cpp  SceneRenderer.h  ShadowPass.cpp  ShadowPass.h  StandardPBRMaterial.cpp  module.json
src/Engine/Modules/Engine.Scene/: FrustumCulling.cpp  FrustumCulling.h  GeometryUtils.cpp  GeometryUtils.h  SceneNode.cpp  SceneNode.h  module.json
src/Engine/Modules/Engine.Window/: WindowModule.cpp  WindowModule.h  module.json
src/Engine/Plugins/RHI.OpenGL/: OpenGLCommandBuffer.cpp  OpenGLCommandBuffer.h  OpenGLDevice.cpp  OpenGLDevice.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLResources.cpp  OpenGLResources.h  RHIModule.cpp  module.json
src/Kernel/Core/: Delegate.h  EngineTypes.h  Log.cpp  Log.h  Module.h  Plugin.h  PluginManager.cpp  PluginManager.h
src/Kernel/ModuleManager/: ModuleManager.cpp  ModuleManager.h
src/Projects/Sandbox/: SandboxModule.cpp  SandboxModule.h  module.json
src/RHI/: DeferredGeometryPass.cpp  DeferredGeometryPass.h  DeferredLightingPass.cpp  DeferredLightingPass.h  ForwardLitPass.cpp  ForwardLitPass.h  IBLPreprocessor.cpp  IMaterial.h  IRHIDevice.h  PostProcessPass.cpp  PostProcessPass.h  RHIDefinitions.h  RHIResources.h  RenderGraph.h  SceneRenderer.cpp  ShadowPass.cpp  ShadowPass.h  StandardPBRMaterial.cpp  StandardPBRMaterial.h
src/RHI/OpenGL/: OpenGLCommandBuffer.cpp  OpenGLCommandBuffer.h  OpenGLDevice.cpp  OpenGLDevice.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLResources.cpp  OpenGLResources.h
tests/: EngineTests.cpp  LogTests.cpp  MaterialTests.cpp  PluginTests.cpp  RHITests.cpp  SceneTests.cpp  ShadowTests.cpp  VertexTests.cpp  WindowTests.cpp
